Add banner linking back to current simpleicons website

--- a/public/index.pug
+++ b/public/index.pug
@@ -28,6 +28,8 @@ html
     link(rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@600&family=Roboto+Mono:wght@400;600&display=swap")
 
   body(class="no-js")
+    div(class="info-oldversion" role="banner")
+      p Go back to #[a(href="https://simpleicons.org/" rel="noopener") the old design] or #[button(id="hide-oldversion" disabled) hide this message].
     header(class="header" role="banner")
       ul(class="header__list")
         li(class="header__list-item")
