Improve use of in-line pug

--- a/public/index.pug
+++ b/public/index.pug
@@ -39,7 +39,7 @@ html
         li(class="header__list-item")
           a(href="https://github.com/simple-icons/simple-icons#readme" rel="noopener") About
       h1(class="header__title") Simple Icons
-      p(class="header__description") #{iconCount} Free <abbr title="Scalable Vector Graphic">SVG</abbr> icons for popular brands
+      p(class="header__description") #{iconCount} Free #[abbr(title="Scalable Vector Graphic") SVG] icons for popular brands
 
     main(class="main" role="main")
       div(class="control")
