--- a/public/index.pug
+++ b/public/index.pug
@@ -84,6 +84,14 @@ html
         li(class="grid-item--if-empty hidden" aria-hidden)
           p Icon missing? #[a(href="https://github.com/simple-icons/simple-icons/issues/new?template=icon_request.md" rel="noopener") Submit a request]
 
+        //- This script ads an extra element after itself.
+        script(
+          async
+          id="_carbonads_js"
+          src="//cdn.carbonads.com/carbon.js?serve=CKYIPK7M&placement=simpleiconsorg"
+          type="text/javascript"
+        )
+
         each icon in icons
           li(class="grid-item" style=`--order-color: ${icon.indexByColor}` data-brand=`${icon.normalizedName}`)
             svg(class="grid-item__decoration" role="img" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg")
