--- a/public/stylesheet.css
+++ b/public/stylesheet.css
@@ -442,7 +442,7 @@ body:not(.dark):not(.light) #color-scheme-system:not(:disabled) {
   overflow: hidden;
   padding-top: 2.5rem;
   position: relative;
-  width: 200px;
+  width: 224px;
 }
 
 @media (max-width: 640px) {
@@ -466,8 +466,8 @@ body:not(.dark):not(.light) #color-scheme-system:not(:disabled) {
   font-family: 'Open Sans', sans-serif;
   font-size: 1.2rem;
   font-weight: 600;
-  line-height: 1.2rem;
-  margin: 0.4rem 1rem;
+  line-height: 1.5rem;
+  margin: 0.4rem 1.7rem 0.4rem 1rem;
   padding-right: 2rem;
 }
 
