--- a/public/stylesheet.css
+++ b/public/stylesheet.css
@@ -18,6 +18,7 @@
   --dm-asset-svg-copied: url(./assets/check-white.svg);
   --dm-color-background: rgb(34, 34, 34);
   --dm-color-background-transparent: rgba(34, 34, 34, 0.7);
+  --dm-color-background-header: rgb(25, 25, 25);
   --dm-color-background-card: rgb(20, 20, 20);
   --dm-color-text-default: rgb(250, 250, 250);
   --dm-color-text-light: rgb(170, 170, 170);
@@ -36,6 +37,7 @@
   --lm-asset-svg-copied: url(./assets/check.svg);
   --lm-color-background: rgb(252, 252, 252);
   --lm-color-background-transparent: rgba(252, 252, 252, 0.7);
+  --lm-color-background-header: rgb(255, 255, 255);
   --lm-color-background-card: rgb(255, 255, 255);
   --lm-color-text-default: rgb(0, 0, 0);
   --lm-color-text-light: rgb(102, 102, 102);
@@ -73,6 +75,7 @@
     --asset-svg-copied: var(--dm-asset-svg-copied);
     --color-background: var(--dm-color-background);
     --color-background-transparent: var(--dm-color-background-transparent);
+    --color-background-header: var(--dm-color-background-header);
     --color-background-card: var(--dm-color-background-card);
     --color-text-default: var(--dm-color-text-default);
     --color-text-light: var(--dm-color-text-light);
@@ -94,6 +97,7 @@
     --asset-svg--link: var(--lm-asset-svg-ext-link);
     --color-background: var(--lm-color-background);
     --color-background-transparent: var(--lm-color-background-transparent);
+    --color-background-header: var(--lm-color-background-header);
     --color-background-card: var(--lm-color-background-card);
     --color-text-default: var(--lm-color-text-default);
     --color-text-light: var(--lm-color-text-light);
@@ -114,6 +118,7 @@ body.dark {
   --asset-svg-copied: var(--dm-asset-svg-copied);
   --color-background: var(--dm-color-background);
   --color-background-transparent: var(--dm-color-background-transparent);
+  --color-background-header: var(--dm-color-background-header);
   --color-background-card: var(--dm-color-background-card);
   --color-text-default: var(--dm-color-text-default);
   --color-text-light: var(--dm-color-text-light);
@@ -132,6 +137,7 @@ body.light {
   --asset-svg-copied: var(--lm-asset-svg-copied);
   --color-background: var(--lm-color-background);
   --color-background-transparent: var(--lm-color-background-transparent);
+  --color-background-header: var(--lm-color-background-header);
   --color-background-card: var(--lm-color-background-card);
   --color-text-default: var(--lm-color-text-default);
   --color-text-light: var(--lm-color-text-light);
@@ -172,17 +178,18 @@ a {
 /* Header */
 
 .header {
-  margin: 5rem 0 2rem;
-  padding: 1rem var(--side-offset);
+  background-color: var(--color-background-header);
+  padding: 5rem var(--side-offset);
 }
 @media (max-width: 860px) {
   .header {
-    margin-top: 2rem;
+    padding-top: 2rem;
   }
 }
 @media (max-width: 640px) {
   .header {
-    margin: 1rem 0 2rem;
+    background-color: var(--color-background);
+    padding-top: 1rem;
   }
 }
 
@@ -231,24 +238,32 @@ a {
 /* Main */
 
 .main {
+  background-color: var(--color-background);
   flex-grow: 2;
-  margin: 2rem 0;
-  padding: 0 var(--side-offset);
+  padding: 0 var(--side-offset) 2rem;
 }
 
 /* Control */
 
 .control {
+  background-color: var(--color-background-header);
+  box-shadow: 0 2px 1px 0 var(--color-shadows);
   display: flex;
   flex-direction: row;
   flex-wrap: wrap-reverse;
-  margin: 2rem 0;
-  position: relative;
+  margin: 0 calc(-1 * var(--side-offset)) 1.2rem;
+  padding: 0.8rem var(--side-offset);
+  position: sticky;
+  top: -1.75rem;
+  z-index: 10;
 }
 @media (max-width: 640px) {
   .control {
+    background-color: var(--color-background);
+    box-shadow: none;
     justify-content: flex-end;
-    margin: 0.5rem 0;
+    margin-bottom: 0.5rem;
+    position: relative;
   }
 }
 
@@ -680,13 +695,13 @@ body.order-by-relevance .grid-item {
 
 .footer {
   align-items: center;
+  background-color: var(--color-background);
   display: flex;
   font-family: 'Roboto Mono', monospace;
   font-size: 0.9rem;
   flex-wrap: wrap;
   justify-content: space-between;
-  margin: 1rem 0 2rem;
-  padding: 0 var(--side-offset);
+  padding: 1rem var(--side-offset) 2rem;
 }
 
 .footer-description {
