Request feedback in temporary banner
Add a link to request feedback through the GitHub discussions thread in
the temporary banner.

Also do some renaming related to the banner, making clear that it is
meant to be temporary in the source code.

--- a/public/index.pug
+++ b/public/index.pug
@@ -28,8 +28,9 @@ html
     link(rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@600&family=Roboto+Mono:wght@400;600&display=swap")
 
   body(class="no-js")
-    div(class="info-oldversion" role="banner")
-      p Go back to #[a(href="https://simpleicons.org/" rel="noopener") the old design] or #[button(id="hide-oldversion" disabled) hide this message].
+    div(class="banner-feedback" role="banner")
+      p #[a(href="https://github.com/simple-icons/simple-icons/discussions/4865" rel="noopener") Share your opinion of the redesign on GitHub] or #[a(href="https://simpleicons.org/" rel="noopener") Go to the old design] or #[button(id="hide-feedback-banner" disabled) Hide this message].
+
     header(class="header" role="banner")
       ul(class="header__list")
         li(class="header__list-item")
