Add option to hide banner only once
Instead of always permenantly. This would allow a visitor to hide the
banner, look at the page, reload and submit feedback or go back to the
original design.

--- a/public/stylesheet.css
+++ b/public/stylesheet.css
@@ -789,3 +789,7 @@ body.order-by-relevance .grid-item {
 .banner-feedback a:visited {
   color: var(--color-link-visited);
 }
+
+.banner__hide {
+  float: right;
+}
