--- a/public/stylesheet.css
+++ b/public/stylesheet.css
@@ -27,7 +27,8 @@
   --dm-color-button-active: rgb(221, 221, 221);
   --dm-color-button-text-hover: rgb(0, 0, 0);
   --dm-color-disabled: rgb(170, 170, 170);
-  --dm-color-shadow: rgba(153, 153, 153, 0.75);
+  --dm-color-grid-item-divider: rgb(64, 64, 64);
+  --dm-color-shadow: rgba(75, 75, 75, 0.95);
   --dm-color-link: rgb(0, 100, 238);
   --dm-color-link-hover: rgb(0, 72, 238);
   --dm-color-link-visited: rgb(169, 144, 189);
@@ -46,6 +47,7 @@
   --lm-color-button-active: rgb(51, 51, 51);
   --lm-color-button-text-hover: rgb(255, 255, 255);
   --lm-color-disabled: rgb(170, 170, 170);
+  --lm-color-grid-item-divider: rgb(204, 204, 204);
   --lm-color-shadow: rgba(0, 0, 0, 0.5);
   --lm-color-link: rgb(0, 0, 238);
   --lm-color-link-hover: rgb(52, 52, 238);
@@ -84,6 +86,7 @@
     --color-button-active: var(--dm-color-button-active);
     --color-button-text-hover: var(--dm-color-button-text-hover);
     --color-disabled: var(--dm-color-disabled);
+    --color-grid-item-divider: var(--dm-color-grid-item-divider);
     --color-shadows: var(--dm-color-shadow);
     --color-link: var(--dm-color-link);
     --color-link-hover: var(--dm-color-link-hover);
@@ -105,6 +108,7 @@
     --color-button-active: var(--lm-color-button-active);
     --color-button-text-hover: var(--lm-color-button-text-hover);
     --color-disabled: var(--lm-color-disabled);
+    --color-grid-item-divider: var(--lm-color-grid-item-divider);
     --color-shadows: var(--lm-color-shadow);
     --color-link: var(--lm-color-link);
     --color-link-hover: var(--lm-color-link-hover);
@@ -126,6 +130,7 @@ body.dark {
   --color-button-active: var(--dm-color-button-active);
   --color-button-text-hover: var(--dm-color-button-text-hover);
   --color-disabled: var(--dm-color-disabled);
+  --color-grid-item-divider: var(--dm-color-grid-item-divider);
   --color-shadows: var(--dm-color-shadow);
   --color-link: var(--dm-color-link);
   --color-link-hover: var(--dm-color-link-hover);
@@ -145,6 +150,7 @@ body.light {
   --color-button-active: var(--lm-color-button-active);
   --color-button-text-hover: var(--lm-color-button-text-hover);
   --color-disabled: var(--lm-color-disabled);
+  --color-grid-item-divider: var(--lm-color-grid-item-divider);
   --color-shadows: var(--lm-color-shadow);
   --color-link: var(--lm-color-link);
   --color-link-hover: var(--lm-color-link-hover);
@@ -551,7 +557,7 @@ body:not(.dark):not(.light) #color-scheme-system:not(:disabled) {
 }
 
 .grid-item__footer {
-  border-top: 1px solid #ccc;
+  border-top: 1px solid var(--color-grid-item-divider);
   background-color: var(--color-background);
   display: flex;
   flex-direction: row;
