Remove bathtype twitter handle

--- a/public/index.pug
+++ b/public/index.pug
@@ -17,7 +17,6 @@ html
     meta(name="twitter:card" content="summary_large_image")
     meta(name="twitter:title" content="Simple Icons")
     meta(name="twitter:description" content=`${iconCount} Free SVG icons for popular brands.`)
-    meta(name="twitter:site" content="@bathtype")
     meta(name="twitter:domain" content="Simple Icons")
     meta(name="twitter:image:src" content="https://simpleicons.org/images/og.png")
     link(rel="icon" type="image/x-icon" href="https://simpleicons.org/images/favicon.ico")
@@ -154,7 +153,7 @@ html
         rel="noopener"
         role="button"
         target="_blank"
-        href="https://twitter.com/intent/tweet?url=https://simpleicons.org&text=Simple%20Icons%3A%20free%20SVG%20icons%20for%20popular%20brands.&via=bathtype"
+        href="https://twitter.com/intent/tweet?url=https://simpleicons.org&text=Simple%20Icons%3A%20free%20SVG%20icons%20for%20popular%20brands."
       )
         svg(class="footer-share--icon" role="img" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg")
           title Twitter logo
