--- a/public/index.pug
+++ b/public/index.pug
@@ -125,7 +125,7 @@ html
               ) #{icon.license.type}
             div(class="grid-item__footer")
               button(class="grid-item__preview copy-button" title=`${icon.title} SVG` disabled)
-                img(src=`data:image/svg+xml;base64,${icon.base64Svg}` loading="lazy" class="icon-preview")
+                img(src=`./icons/${icon.slug}.svg` loading="lazy" class="icon-preview")
               div(class="grid-item__downloads")
                 h3 Download
                 div(class="grid-item__button-row")
