Fix `rel="noopener"` in guidelines and license links

--- a/public/index.pug
+++ b/public/index.pug
@@ -111,7 +111,7 @@ html
                 class="grid-item__guidelines link-button"
                 title=`${icon.title} guidelines`
                 href=icon.guidelines
-                rel="noopner"
+                rel="noopener"
                 target="_blank"
               ) Brand Guidelines
             if icon.license
@@ -119,7 +119,7 @@ html
                 class="grid-item__legal"
                 title=`${icon.title} icon license`
                 href=icon.license.url
-                rel="noopner"
+                rel="noopener"
                 target="_blank"
               ) #{icon.license.type}
             div(class="grid-item__footer")
