--- a/public/index.pug
+++ b/public/index.pug
@@ -97,49 +97,46 @@ html
 
         each icon in icons
           li(class="grid-item" style=`--order-color: ${icon.indexByColor}` data-brand=`${icon.normalizedName}`)
-            svg(class="grid-item__decoration" role="img" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg")
-              use(href=`#${icon.slug}-svg`)
-            h2(class="grid-item__title") #{icon.title}
-            button(
-              class=`grid-item__color copy-button ${icon.light ? "contrast-light" : "contrast-dark"} ${icon.superLight ? "border-light" : ""}  ${icon.superDark ? "border-dark" : ""}`
-              style=`background-color: #${icon.shortHex}`
-              title=`${icon.title} color`
-              disabled
-            ) ##{icon.hex}
-            if icon.guidelines
-              a(
-                class="grid-item__guidelines link-button"
-                title=`${icon.title} guidelines`
-                href=icon.guidelines
-                rel="noopener"
-                target="_blank"
-              ) Brand Guidelines
-            if icon.license
-              a(
-                class="grid-item__legal"
-                title=`${icon.title} icon license`
-                href=icon.license.url
-                rel="noopener"
-                target="_blank"
-              ) #{icon.license.type}
-            div(class="grid-item__footer")
-              button(class="grid-item__preview copy-button" title=`${icon.title} SVG` disabled)
+            div(class="grid-item__preview")
+              button(class="copy-button copy-svg" title=`${icon.title} SVG` disabled)
                 svg(id=`${icon.slug}-svg` role="img" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg")
                   title #{icon.title} icon
                   path(d=icon.path)
-              div(class="grid-item__downloads")
-                h3 Download
-                div(class="grid-item__button-row")
-                  a(
-                    class="grid-item__button"
-                    href=`./icons/${icon.slug}.svg`
-                    download
-                  ) SVG
-                  a(
-                    class="grid-item__button"
-                    href=`./icons/${icon.slug}.pdf`
-                    download
-                  ) PDF
+            div(class="grid-item__row")
+              if icon.guidelines
+                a(
+                  class="grid-item__guidelines link-button"
+                  title=`${icon.title} guidelines`
+                  href=icon.guidelines
+                  rel="noopener"
+                  target="_blank"
+                ) Brand Guidelines
+              if icon.license
+                a(
+                  class="grid-item__legal"
+                  title=`${icon.title} icon license`
+                  href=icon.license.url
+                  rel="noopener"
+                  target="_blank"
+                ) #{icon.license.type}
+              h2(class="grid-item__title") #{icon.title}
+            div(class="grid-item__footer")
+              button(
+                class=`grid-item__color copy-button copy-color ${icon.light ? "contrast-light" : "contrast-dark"} ${icon.superLight ? "border-light" : ""}  ${icon.superDark ? "border-dark" : ""}`
+                style=`background-color: #${icon.shortHex}`
+                title=`${icon.title} color`
+                disabled
+              ) ##{icon.hex}
+              a(
+                class="grid-item__button"
+                href=`./icons/${icon.slug}.svg`
+                download
+              ) SVG
+              a(
+                class="grid-item__button"
+                href=`./icons/${icon.slug}.pdf`
+                download
+              ) PDF
 
     footer(class="footer" role="contentinfo")
       div(class="footer-description")
