Add missing Twitter logo to Share button in footer

--- a/public/index.pug
+++ b/public/index.pug
@@ -152,7 +152,7 @@ html
       )
         svg(class="footer-share--icon" role="img" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg")
           title Twitter logo
-          use(href=`#twitter-svg`)
+          path(d=twitterIcon.path)
         span Share this on Twitter!
 
     input(id="copy-input" class="hidden" aria-hidden="true")
