Add z-index: 1; to the grid-item__preview copy-button on-hover before psuedo-element to ensure it is displayed in front of the preview SVG/ <img>. Without this it seems that, for some reason, in dark mode the hover effect does not work as the ::before psuedo-element is rendered behind the SVG.

--- a/public/stylesheet.css
+++ b/public/stylesheet.css
@@ -520,6 +520,7 @@ body:not(.dark):not(.light) #color-scheme-system:not(:disabled) {
 @media (hover: hover) {
   .grid-item__preview .copy-button:not(:disabled):hover::before {
     display: block;
+    z-index: 1;
   }
 }
 
