Add lazy loading using `loading="lazy"` (#55)
* Use `loading="lazy"` on image elements to lazy load icons

And the copy functionality has been updated to `fetch` the raw SVG. From
local testing (Firefox only) it seems this request is always served from
the cache, rather actually sending a second request to get the SVG.

* Fix lazy loading icons in dark mode

* Implement lazy rendering with base64 encoded SVG in <img>

* Mock `atob` in copy.js test suite

* Add missing Twitter logo to Share button in footer

* Add z-index: 1; to the grid-item__preview copy-button on-hover before
psuedo-element to ensure it is displayed in front of the preview SVG/
<img>. Without this it seems that, for some reason, in dark mode the
hover effect does not work as the ::before psuedo-element is rendered
behind the SVG.

--- a/public/index.pug
+++ b/public/index.pug
@@ -99,9 +99,7 @@ html
           li(class="grid-item" style=`--order-color: ${icon.indexByColor}` data-brand=`${icon.normalizedName}`)
             div(class="grid-item__preview")
               button(class="copy-button copy-svg" title=`${icon.title} SVG` disabled)
-                svg(id=`${icon.slug}-svg` role="img" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg")
-                  title #{icon.title} icon
-                  path(d=icon.path)
+                img(src=`data:image/svg+xml;base64,${icon.base64Svg}` loading="lazy" class="icon-preview")
             div(class="grid-item__row")
               if icon.guidelines
                 a(
@@ -154,7 +152,7 @@ html
       )
         svg(class="footer-share--icon" role="img" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg")
           title Twitter logo
-          use(href=`#twitter-svg`)
+          path(d=twitterIcon.path)
         span Share this on Twitter!
 
     input(id="copy-input" class="hidden" aria-hidden="true")
