Fix style issue with
Fix a stylistic issue where the ".copied" class on the SVG copy button
would not properly display, in dark mode, after unhovering. This is due
to the fact that the z-index: 1; styling is only applied on hover (if
hovering is available on the system). This has been fixed by adding
z-index: 1; to the .copied (and :focus) selector as well.

--- a/public/stylesheet.css
+++ b/public/stylesheet.css
@@ -516,6 +516,7 @@ body:not(.dark):not(.light) #color-scheme-system:not(:disabled) {
 .grid-item__preview .copy-button:not(:disabled).copied::before,
 .grid-item__preview .copy-button:not(:disabled):focus::before {
   display: block;
+  z-index: 1;
 }
 @media (hover: hover) {
   .grid-item__preview .copy-button:not(:disabled):hover::before {
