Add CDN links, specifcally JSDelivr and Unpkg

--- a/public/index.pug
+++ b/public/index.pug
@@ -39,6 +39,10 @@ html
           a(href="https://www.npmjs.com/package/simple-icons" rel="noopener") NPM
         li(class="header__list-item")
           a(href="https://packagist.org/packages/simple-icons/simple-icons" rel="noopener") Packagist
+        li(class="header__list-item")
+          a(href="https://www.jsdelivr.com/package/npm/simple-icons" rel="noopener") JSDelivr
+        li(class="header__list-item")
+          a(href="https://unpkg.com/browse/simple-icons/" rel="noopener") Unpkg
       h1(class="header__title") Simple Icons
       p(class="header__description") #{iconCount} Free #[abbr(title="Scalable Vector Graphic") SVG] icons for popular brands
 
