--- a/public/index.pug
+++ b/public/index.pug
@@ -97,13 +97,13 @@ html
 
         each icon in icons
           li(class="grid-item" style=`--order-color: ${icon.indexByColor}` data-brand=`${icon.normalizedName}`)
-            div(class="grid-item__preview")
-              button(class="copy-button copy-svg" title=`${icon.title} SVG` disabled)
+            div(class="grid-item__row mv-2 fg-2")
+              button(class="grid-item__preview copy-button copy-svg" title=`${icon.title} SVG` disabled)
                 img(src=`data:image/svg+xml;base64,${icon.base64Svg}` loading="lazy" class="icon-preview")
             div(class="grid-item__row")
               if icon.guidelines
                 a(
-                  class="grid-item__guidelines link-button"
+                  class="grid-item__link link-button"
                   title=`${icon.title} guidelines`
                   href=icon.guidelines
                   rel="noopener"
@@ -111,7 +111,7 @@ html
                 ) Brand Guidelines
               if icon.license
                 a(
-                  class="grid-item__legal"
+                  class="grid-item__link link-button icon-legal"
                   title=`${icon.title} icon license`
                   href=icon.license.url
                   rel="noopener"
