Update website metadata
Based on a Lighthouse report:

- Add a page language to the HTML tag
- Ligthouse didn't recognize "utf-8" (lowercase) as charset, may be a
  bug, but there's no harm in changing it.
- Remove unused "preconnect" links
- Add a canonical link

--- a/public/index.pug
+++ b/public/index.pug
@@ -1,11 +1,9 @@
 doctype html
-html
+html(lang="en-US")
   head
-    meta(charset="utf-8")
+    meta(charset="UTF-8")
     meta(content="initial-scale=1, shrink-to-fit=no, width=device-width" name="viewport")
     link(rel="preconnect" href="https://fonts.gstatic.com")
-    link(rel="preconnect" href="https://cdn.carbonads.com")
-    link(rel="preconnect" href="https://github.com")
     title Simple Icons
     meta(name="description" content=`${iconCount} Free SVG icons for popular brands.`)
     meta(property="og:type" content="website")
@@ -25,6 +23,7 @@ html
     link(rel="apple-touch-icon" href="https://simpleicons.org/images/apple-touch-icon.png")
     link(rel="mask-icon" href="https://simpleicons.org/images/logo.svg" color="#111111")
     link(rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@600&family=Roboto+Mono:wght@400;600&display=swap")
+    link(rel="canonical" href="https://simpleicons.org/")
 
   body(class="no-js order-alphabetically")
     div(class="banner-feedback" role="banner")
